# duty-schedule-bot

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE.md  README.md  docker-compose.slack.yml  docker-compose.telegram.yml  docker-compose.yml  docker-entrypoint.sh  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: lint-and-tests.yml
app/common/: cache.py  constants.py  exceptions.py  handlers.py
app/config/: __init__.py  common.py  slack.py  telegram.py
app/slack/: constants.py  handlers.py  run_bot.py  run_scheduler.py  tasks.py
app/telegram/: constants.py  handlers.py  run_bot.py  run_scheduler.py  tasks.py
app/tests/: conftest.py
app/tests/common/: test_exceptions.py  test_handlers.py
app/tests/slack/: test_handlers.py  test_tasks.py
app/tests/telegram/: test_handlers.py  test_tasks.py
